<resources>
    <string name="app_name">Movie Champ</string>

    <string name="menu_popular">Popular</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_favorites">Favorites</string>

    <string name="plot_label">Plot</string>
    <string name="fake_plot_content">An Amazon princess comes to the world of Man to become the greatest of the female superheroes.</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>

    <string name="no_connection_error">No Interent connection!</string>
    <string name="no_reviews_message">Sorry! There are currently no reviews available for this movie!</string>

    <string name="pref_popular">popular</string>

    <string name="pref_order_by_key">order_by</string>
    <string name="pref_order_by_default">popular</string>

    <string name="fav_offline_mode">Trailers &amp; Reviews are available when Internet is connected</string>

    <string name="movie_delete_failed">Failed to delete movie from favorites</string>
    <string name="movie_delete_success">Removed from favorites!</string>

</resources>
